argocd/base/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - argocd.example.com
      secretName: argocd-example-com-tls
  rules:
    - host: argocd.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: argocd-server
              servicePort: 80
